# STC

./: CMakeLists.txt  README.md  STC.pro  main.cpp  main.qml  qml.qrc  qmlsettings.h  torrentfile.cpp  torrentfile.h
